# ppt-ai

./: .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/autoencoder/: module.py  predict.py  train.py
src/autoencoder/configs/: config.py  predict.yaml  train.yaml
src/autoencoder/configs/datasets/: bdd100k.yaml  comma10k.yaml  waymo_perc.yaml
src/autoencoder/data/: data_module.py
src/autoencoder/data/datasets/: bdd100k.py  comma10k.py  img_loader.py  mcap_loader.py  waymo_perc.py
src/autoencoder/models/: decoder.py  discriminator.py  encoder.py  layers.py
src/common/: frame_buffer.py  img_processor.py  layers.py  mcap_merge.py
src/common/callbacks/: profiler.py
src/common/logging/: data_logger.py
src/vio/: batch_data.py  data_module.py  enums.py  loss.py  mcap_streamer.py  module.py  predict.py  train.py  visu.py
src/vio/config/: config.py  train.yaml
src/vio/configs/: config.py  predict.yaml  train.yaml
src/vio/data/: augmentation.py  batch_data.py  data_module.py  mcap_dataset.py  mcap_streamer.py
src/vio/model/: cam_encoder.py  depth_decoder.py  imu_encoder.py  pose_estimator.py
tests/: dummy_test.py
tests/autoencoder/data/datasets/: test_mcap_loader.py
tests/vio/: test_data_module.py  test_loss.py
